# guesslanguage

./: Makefile  README.md  setup.cfg  setup.py
guesslanguage/: __init__.py  core.py
guesslanguage/templates/: guesslanguage.html
guesslanguages/templates/: guess_language.html
libindic/guesslanguage/: __init__.py  blocks.py  blocks_test.py  core.py  langdetect.py
libindic/guesslanguage/templates/: guesslanguage.html
libindic/guesslanguage/tests/: test_blocks.py  test_guesslang.py
